objects/cloudworx_Management_Console__c.object
<CustomObject>
    <fields>
        <fullName>Deactivate_Auto_Follow_ups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Auto-Follow-ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Auto_Loss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Auto Loss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Autosend_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Autosend Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Autosend_Cost_Note_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Autosend Cost Note Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Autosend_Invoice_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Autosend Invoice Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Autosend_Welcome_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Autosend Welcome Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Dropbox_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Dropbox Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Email_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If email is deactivated and a user is entered here, email is only deactivated for the user in this field.</inlineHelpText>
        <label>Deactivate Email User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>cloudworx_Management_Consoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deactivate_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Sync_To_21legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Sync To 21legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Task_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Task Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Transaction_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Transaction Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Transaction_Receival__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Transaction Receival</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivate_Trigger_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deactivate Trigger User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>cloudworx_Management_Consoles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deactivate_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Queueable_Chaining__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Queueable Chaining</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_cloudworx_Management_Console_ID__c</fullName>
        <label>Old cloudworx Management Console ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Email_Via_API__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Via API</label>
        <type>Checkbox</type>
    </fields>
    <label>Management Console</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>cloudworx Management Console Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Management Consoles</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Deactivate_Auto_Follow_ups__c</columns>
        <columns>Deactivate_Autosend_Cost_Note_Reminder__c</columns>
        <columns>Deactivate_Autosend_Welcome_Letter__c</columns>
        <columns>Deactivate_Email__c</columns>
        <columns>Deactivate_Task_Creation__c</columns>
        <columns>Deactivate_Transaction_Mapping__c</columns>
        <columns>Deactivate_Transaction_Receival__c</columns>
        <columns>Disable_Queueable_Chaining__c</columns>
        <columns>Send_Email_Via_API__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>